`MetadataController` uses `PhenopacketLabMetadata` and `ConceptResourceService` to serve information about resources.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>