@@ -1,7 +1,9 @@
 package org.monarchinitiative.phenopacketlab.restapi.controller;
 
 import io.swagger.v3.oas.annotations.Parameter;
+import org.monarchinitiative.phenopacketlab.core.ConceptResourceService;
 import org.monarchinitiative.phenopacketlab.core.PhenopacketLabMetadata;
+import org.monarchinitiative.phenopacketlab.core.model.IdentifiedConceptResource;
 import org.monarchinitiative.phenopacketlab.core.model.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -9,22 +11,26 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "${api.version}/metadata")
 public class MetadataController {
 
     private final PhenopacketLabMetadata metadataService;
+    private final ConceptResourceService conceptResourceService;
 
-    public MetadataController(PhenopacketLabMetadata metadataService) {
+
+    public MetadataController(PhenopacketLabMetadata metadataService,
+                              ConceptResourceService conceptResourceService) {
         this.metadataService = metadataService;
+        this.conceptResourceService = conceptResourceService;
     }
 
     @GetMapping("{prefix}")
-    public ResponseEntity<Resource> metadataByPrefix(@PathVariable("prefix") @Parameter(description = """
+    public ResponseEntity<Resource> metadataByPrefix(@PathVariable("prefix")
+    // TODO - update the description string
+                                                         @Parameter(description = """
                                                        __Accepted:__
 
                                                        * HP
@@ -37,17 +43,15 @@ public class MetadataController {
                                                        * NCIT
                                                        * GSSO
                                                        """) String prefix) {
-        List<String> acceptedPrefix = Arrays.asList("HP", "EFO", "GENO", "MONDO", "SO", "UBERON", "HGNC", "NCIT", "GSSO");
-        if (!acceptedPrefix.contains(prefix.toUpperCase())) {
-            return ResponseEntity.badRequest().build();
-        }
-        return ResponseEntity.of(metadataService.resourceByPrefix(prefix));
+        return conceptResourceService.forPrefix(prefix.toUpperCase())
+                .map(IdentifiedConceptResource::getResource)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.badRequest().build());
     }
 
     @GetMapping
     public ResponseEntity<List<Resource>> metadata() {
-        return ResponseEntity.ok(metadataService.resources()
-                .collect(Collectors.toList()));
+        return ResponseEntity.ok(conceptResourceService.resources().toList());
     }
 
     @GetMapping(value="version")
